# rocmate

./: .gitattributes  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config_submission.yml
.github/workflows/: ci.yml  community.yml  pages.yml  publish.yml
configs/tools/: axolotl.yaml  comfyui.yaml  exllamav2.yaml  faster-whisper.yaml  llama-cpp.yaml  ollama.yaml  stable-diffusion-webui.yaml  vllm.yaml
data/: community_benchmarks.json
scripts/: build_matrix.py  fetch_community_benchmarks.py  lint_configs.py
src/rocmate/: __init__.py  cli.py  configs.py  doctor.py  fixer.py  gpu.py  install.py
tests/: test_basic.py  test_cli.py  test_configs.py  test_doctor.py  test_fixer.py  test_gpu.py  test_install.py
